<resources>
    <string name="app_name">Aninnyz</string>
    <string name="ani">AniNyuz</string>
    <string name="description">Watch anime online in HD, with subtitles or dubbed, on your phone or computer.</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">Welcome</string>
    <string name="headline">ひさしぶり!</string>
    <string name="long_time_no_see">Long time no see!</string>
    <string name="logintext">Login</string>
    <string name="password">password</string>
    <string name="forget_password">Forget Password</string>
    <string name="do_you_not_have_an_account">Do you not have an account?</string>
    <string name="sign_up2">Sign-up</string>
    <string name="sign_up_headline">ようこそ!</string>
    <string name="welcome2">Welcome!</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="are_you_already_a_member">Are you already a member?</string>
    <string name="log_in">log in</string>
    <string name="thankyou">Thank You For Login\n Now i have your password</string>
    <string name="sign_in_with_google">sign in with google</string>
    <string name="default_web_client_id">772354964761-n9gbev7r6k55u8pc4r44p1pjbutl28pd.apps.googleusercontent.com</string>
    <string name="google_sign_in">Google sign in</string>
    <string name="phone_n_o">phone N.O</string>
    <string name="login_with_nmobile_number">Login with \nMobile number</string>
    <string name="_91">+91</string>
    <string name="send_otp">Send otp</string>
    <string name="type_your_number">Type your number</string>
    <string name="verify">Verify</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="_0">0</string>
    <string name="_00">0</string>
    <string name="_000">0</string>
    <string name="_0000">0</string>
    <string name="_00000">0</string>
    <string name="_000000">0</string>
    <string name="welcome_to_home_page">Welcome TO Home Page</string>
</resources>