<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/back_btn"
        android:layout_width="48dp"
        android:layout_height="51dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/mask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.154"
        app:srcCompat="@drawable/mask"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/headline"
        android:layout_width="226dp"
        android:layout_height="68dp"
        android:gravity="center"
        android:text="@string/headline"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mask"
        app:layout_constraintVertical_bias="0.029"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/headline2"
        android:layout_width="216dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/long_time_no_see"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headline"
        app:layout_constraintVertical_bias="0.023"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/loginText"
        android:layout_width="58dp"
        android:layout_height="27dp"
        android:text="@string/logintext"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headline2"
        app:layout_constraintVertical_bias="0.064"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/email_id"
        android:layout_width="358dp"
        android:layout_height="60dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:textColor="@color/black"
        android:textColorHint="#D8D5D9"
        android:textSize="20sp"
        android:textStyle="bold"
        android:hint="Email"
        android:paddingStart="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headline2"
        app:layout_constraintVertical_bias="0.165"
        tools:ignore="HardcodedText,LabelFor,RtlSymmetry,SpeakableTextPresentCheck,TextFields" />

    <TextView
        android:id="@+id/passeord_Text"
        android:layout_width="83dp"
        android:layout_height="25dp"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headline2"
        app:layout_constraintVertical_bias="0.344"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/enter_password"
        android:layout_width="358dp"
        android:layout_height="60dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:textColorHint="#D8D5D9"
        android:textSize="20sp"
        android:textStyle="bold"
        android:hint="@string/password"
        android:paddingStart="18dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headline2"
        app:layout_constraintVertical_bias="0.463"
        app:passwordToggleEnabled="true"
        tools:ignore="DuplicateSpeakableTextCheck,HardcodedText,LabelFor,RtlSymmetry,SpeakableTextPresentCheck,TextFields" />

    <TextView
        android:id="@+id/forget"
        android:layout_width="143dp"
        android:layout_height="29dp"
        android:text="@string/forget_password"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.899"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_password"
        app:layout_constraintVertical_bias="0.114"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/not_have_account"
        android:layout_width="220dp"
        android:layout_height="22dp"
        android:text="@string/do_you_not_have_an_account"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_password"
        app:layout_constraintVertical_bias="0.788"
        tools:ignore="TextSizeCheck,TextSizeCheck" />

    <TextView
        android:id="@+id/re_signup"
        android:layout_width="114dp"
        android:layout_height="24dp"
        android:text="@string/sign_up2"
        android:textColor="#E487FB"
        android:textSize="17sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/not_have_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>