<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SignUpActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/back_btn"
        android:layout_width="48dp"
        android:layout_height="41dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="92dp"
        android:layout_height="96dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.197"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.094"
        app:srcCompat="@drawable/sign_up_mask" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="191dp"
        android:layout_height="62dp"
        android:layout_marginTop="72dp"
        android:text="@string/sign_up_headline"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="193dp"
        android:layout_height="49dp"
        android:text="@string/welcome2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/EmailText"
        android:layout_width="58dp"
        android:layout_height="37dp"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.264"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/sign_email"
        android:layout_width="358dp"
        android:layout_height="60dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:hint="Email"
        android:paddingStart="18dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailText"
        app:layout_constraintVertical_bias="0.04"
        tools:ignore="HardcodedText,LabelFor,RtlSymmetry,SpeakableTextPresentCheck,TextFields,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/Signup_password"
        android:layout_width="97dp"
        android:layout_height="36dp"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.424"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/sign_password_enter"
        android:layout_width="358dp"
        android:layout_height="60dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:hint="@string/password"
        android:paddingStart="18dp"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="#D8D5D9"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Signup_password"
        app:layout_constraintVertical_bias="0.039"
        tools:ignore="HardcodedText,LabelFor,RtlSymmetry,SpeakableTextPresentCheck,TextFields,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/Confirm_password"
        android:layout_width="193dp"
        android:layout_height="38dp"
        android:text="@string/confirm_password"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.604"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/Confirm_password_enter"
        android:layout_width="358dp"
        android:layout_height="60dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingStart="18dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Confirm_password"
        app:layout_constraintVertical_bias="0.053"
        tools:ignore="HardcodedText,LabelFor,RtlSymmetry,SpeakableTextPresentCheck,TextFields,DuplicateSpeakableTextCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register"
        android:layout_width="156dp"
        android:layout_height="68dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/loginbg"
        android:text="@string/register"
        android:textColor="#3E1149"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Confirm_password_enter"
        app:layout_constraintVertical_bias="0.333" />

    <TextView
        android:id="@+id/have_account"
        android:layout_width="220dp"
        android:layout_height="22dp"
        android:layout_marginBottom="36dp"
        android:text="@string/are_you_already_a_member"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.329"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintVertical_bias="0.732"
        tools:ignore="TextSizeCheck,TextSizeCheck,UnknownIdInLayout" />

    <TextView
        android:id="@+id/re_login"
        android:layout_width="114dp"
        android:layout_height="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/log_in"
        android:textColor="#E487FB"
        android:textSize="17sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/have_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toEndOf="@+id/have_account"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>